# osfes_osapi_zephyr

./: CMakeLists.txt  Kconfig  README.md  cunit_patch.patch  prj.conf  west.yml
src/: main.cpp
src/cunit_tests/: cunit_main.cpp  test_00_thread_name.cpp  test_01_thread_creation.cpp  test_02_thread_join.cpp  test_03_thread_suspend_resume.cpp  test_04_thread_delay.cpp  test_05_thread_priority.cpp  test_06_thread_priority_change.cpp  test_07_thread_run_detailed.cpp  test_08_thread_state.cpp  test_09_thread_suspend_inactive.cpp  test_10_thread_stack_size.cpp  test_20_mutex.cpp  test_21_recursive_mutex.cpp  test_30_mortal_thread.cpp
src/osapi/: osapi.h  osapi_mortal_thread.h  osapi_mutex_interface.h  osapi_thread_interface.h
src/osapi/zephyr/: osapi_mutex_zephyr.h  osapi_recursive_mutex_zephyr.h  osapi_thread_zephyr.h  osapi_zephyr.cpp
